Add views for get, create and delete child
