# backend/docs/openapi.yaml
@@ -11,6 +11,8 @@ tags:
     description: "api auth"
   - name: users
     description: "api users"
+  - name: children
+    description: "api children"
 
 paths:
   '/auth/register/':
@@ -62,10 +64,55 @@ paths:
       responses:
         '200':
           $ref: '#/components/responses/UsersMe200'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+
+  '/users/children/':
+    get:
+      tags:
+        - children
+      summary: "Get children"
+      security:
+        - bearerAuth: [ ]
+      responses:
+        '200':
+          $ref: '#/components/responses/ChildList200'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+
+    post:
+      tags:
+        - children
+      summary: "Create child"
+      security:
+        - bearerAuth: [ ]
+      requestBody:
+        $ref: '#/components/requestBodies/ChildCreate'
+      responses:
+        '200':
+          $ref: '#/components/responses/ChildCreate200'
         '400':
-          description: "Unauthorized"
+          $ref: '#/components/responses/ChildCreate400'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
 
-
+    delete:
+      tags:
+        - children
+      summary: "Delete child"
+      parameters:
+        - name: child_id
+          in: path
+          schema:
+            type: number
+          required: true
+      security:
+        - bearerAuth: []
+      responses:
+        '204':
+          description: 'Success delete'
+        '404':
+          $ref: '#components/responses/NotFound'
 
 components:
   securitySchemes:
@@ -73,6 +120,16 @@ components:
       type: http
       scheme: bearer
       bearerFormat: JWT
+
+  schemas:
+    ChildRetrieve:
+      type: object
+      properties:
+        id:
+          type: number
+        name:
+          type: string
+
 
   requestBodies:
     RegistrationRequestBody:
@@ -113,7 +170,39 @@ components:
                 type: string
       required: true
 
+    ChildCreate:
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              name:
+                type: string
+      required: true
+
   responses:
+    Unauthorized:
+      description: "Unauthorized"
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              detail:
+                type: string
+                example: "Учетные данные не были предоставлены."
+
+    NotFound:
+      description: "Not Found"
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              detail:
+                type: string
+                example: "Страница не найдена."
+
     Registration201:
       description: "Created"
       content:
@@ -192,4 +281,33 @@ components:
             properties:
               username:
                 type: string
+
+    ChildList200:
+      description: "Success"
+      content:
+        application/json:
+          schema:
+            type: array
+            items:
+              $ref: '#/components/schemas/ChildRetrieve'
+
+    ChildCreate200:
+      description: "Success"
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/ChildRetrieve'
+
+    ChildCreate400:
+      description: "Bad Request"
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              name:
+                type: array
+                items:
+                  type: string
+                  example: "Убедитесь, что это значение содержит не более 55 символов."
 
